<resources>
    <string name="app_name">RandomChoiceHelperApp</string>
    <string name="buttonGenerateRandomString">Random word</string>
    <string name="buttonGenerateRandomNumber">Random Number</string>
    <string name="buttonChooseRandomString">Choose Random Movie</string>
    <string name="buttonChooseRandomNumber">Choose Random Number</string>
    <string name="outputRandom">Random Number Field</string>
    <string name="outputRandomString">Random String Field</string>
    <string name="first">enter your first choice here</string>
    <string name="second">enter your second choice here</string>
    <string name="third">enter your third choice here</string>
    <string name="fourth">enter your fourth choice here</string>
    <string name="firstNumber">enter first number</string>
    <string name="secondNumber">enter second number</string>
    <string name="thirdNumber">enter third number</string>
    <string name="fourthNumber">enter fourth number</string>
    <string name="Result">Heres the result!</string>
    <string name="RandomNumberButton">go!</string>
    <string name="RandomStringButton">Lets go!</string>
    <string name="how_many_possible_choices_do_you_have">How many possible choices do you have?</string>
    <string name="add_wordGroup">ADD WORDGROUP</string>

    <string name="hint_word">Word…</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
    <string name="buttonStartDBActvity">start DB Crud</string>
    <string name="text_label_1">wortX</string>
    <string name="text_label_2">WortAusX</string>
    <string name="text_label_3">NumberX</string>
    <string name="text_label_4">NumberOutOfX</string>

    <string name="TabItem1">Monday</string>

    <string name="Monday">Montag</string>
    <string name="Tuesday">Dienstag</string>
    <string name="Wednesday">Mittwoch</string>


    <string name="TAB3">TAB 3</string>
    <string name="TAB2">TAB 2</string>
    <string name="TAB1">TAB 1</string>
    <string name="dialog_start_game">start game</string>
    <string name="start">start</string>
    <string name="cancel">cancel</string>
    <string name="pick_choices">pick choices</string>
</resources>