<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:showDividers="middle"
    android:divider="@drawable/empty_tall_divider"
    android:layout_columnSpan="20"
    android:layout_margin="10dp"
    android:columnCount="3"
    android:rowCount="8"

    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--<Button
        android:layout_width="match_partent>"
        android:layout_height="match_parent"
        android:text="@string/app_name"/>-->
    <Button
        android:id="@+id/buttonGenerateRandomNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:onClick="OnClickGenerateRandomInteger"
        android:text="@string/buttonGenerateRandomNumber" />

    <TextView
        android:id="@+id/outputRandomNumber"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:textSize="12dp"
        android:textColor="@color/teal_200"
        android:layout_row="1"
        android:layout_column="1" />

    <Button
        android:id="@+id/buttonGenerateRandomString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:onClick="OnClickGenerateRandomString"
        android:text="@string/buttonGenerateRandomString" />

    <TextView
        android:id="@+id/outputRandomString"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:textSize="12dp"
        android:textColor="@color/teal_200"
        android:layout_row="2"
        android:layout_column="1" />

    <Button
        android:id="@+id/buttonChooseRandomNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:onClick="OnClickChooseRandomNumber"
        android:text="@string/buttonChooseRandomNumber" />


    <Button
        android:id="@+id/buttonChooseRandomWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="0"
        android:onClick="OnClickChooseRandomString"
        android:text="@string/buttonChooseRandomString" />


    <Button
        android:id="@+id/buttonStartDBActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="OnClickStartActivityDB"
        android:text="@string/buttonStartDBActvity" />
</LinearLayout>